# ppc

./: CMakeLists.txt  a.md  a.out  demo.cpp  matrix.h  memory_alignment.cpp  shortcut.cpp  shortcut_memopt.cpp  shortcut_v0.cpp  shortcut_v1.cpp  shortcut_v2.cpp  shortcut_v3-1.cpp  shortcut_v3.cpp  vector_instructions.cpp
